tests/golden/error/duplicate_import_same_module/mymod.tg
// Submodule providing Foo type
pub type Foo = Nat
